--- a/курсы.html
+++ b/курсы.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <ul>
-   <a href="https://www.youtube.com/watch?v=bWNmJqgri4Q&t=2252s">Учим HTML за 1 час! #От Профессионала | HD Remake</a>
+   <li> <a href="https://www.youtube.com/watch?v=bWNmJqgri4Q&t=2252s">Учим HTML за 1 час! #От Профессионала | HD Remake</a> </li>
     </ul>
 </body>
 </html>
